Feat. Create module user-photo
