# src/modules/user-photo/types/user-photo.types.ts
@@ -1,0 +1,13 @@
+export interface ICreateUserPhoto {
+  original_name: string;
+  size: number;
+  url: string;
+  user_id: number;
+}
+
+export interface IUpdateUserPhoto {
+  original_name?: string;
+  size?: number;
+  url?: string;
+  user_id?: number;
+}
